--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "migrator"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 [lib]
 name = "migrator"
@@ -12,3 +12,4 @@ name = "migrator"
 path = "src/main.rs"
 
 [dependencies]
+rusqlite = { version = "0.33.0", features = ["bundled"] }
