--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,6 @@ name = "migrator"
 path = "src/main.rs"
 
 [dependencies]
+chrono = "0.4.40"
+clap = { version = "4.5.31", features = ["derive"] }
 rusqlite = { version = "0.33.0", features = ["bundled"] }
