--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,6 @@ path = "src/main.rs"
 [dependencies]
 chrono = "0.4.40"
 clap = { version = "4.5.31", features = ["derive"] }
+env_logger = "0.11.6"
+log = "0.4.26"
 rusqlite = { version = "0.33.0", features = ["bundled"] }
