--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,4 @@ clap = { version = "4.5.31", features = ["derive"] }
 env_logger = "0.11.6"
 log = "0.4.26"
 rusqlite = { version = "0.33.0", features = ["bundled"] }
+thiserror = "2.0.12"
